[package]
name = "voxelar-vertex"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = "0.37.3"

voxelar-vertex-derive = { path = "voxelar-vertex-derive" }
voxelar-utils = { git = "https://github.com/jarvarvarvis/voxelar-utils" }
